# nfl-betting-system

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  AI_BETTING_TOOLS_REVERSE_ENGINEERING.md  AI_MODELS_AND_API_GUIDE.md  AI_REASONING_SWARM_GUIDE.md  API_COMPLETE_GUIDE.md  ARCHITECT_FINAL_ASSESSMENT.md  ARCHITECT_HANDOFF_COMPLETE.md  ARCHITECT_REVIEW_TASK_002.md  AUDIT_COMPLETE.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_SUMMARY.md  AUTH_SYSTEM_GUIDE.md  BACKTESTING_LAB_IMPLEMENTATION.md  BACKTEST_INVENTORY.md  BETTING_MARKET_RESEARCH.md  BIG_IDEAS_NEXT_PHASE.md  BREAKTHROUGH_STRATEGY.md  BULLDOG_CRITICAL_FINDINGS.md  BULLDOG_FINAL_SUMMARY.md  BULLDOG_MODE_COMPLETE_SUMMARY.md  BULLDOG_SOLUTION.md  CHANGELOG_CLAUDE_SESSION.md  CLAUDE.md  CLAUDE_IMPLEMENTATION_SUMMARY.md  CODEBASE_AUDIT_AND_REFACTORING_SUMMARY.md  CODEBASE_AUDIT_COMPLETE.md  CODEBASE_AUDIT_ISSUES.md  CODEBASE_CLEANUP_PLAN.md  COMPLETE_SYSTEM_SUMMARY.md  COMPOSER_1_FINAL_ARCHITECT_REPORT.md  COMPOSER_1_FINAL_REPORT.md  COMPOSER_1_IMPLEMENTATION_STATUS.md  COMPOSER_1_PLAN.md  COMPOSER_1_RESULTS.md  COMPOSER_BACKTEST_BULLDOG_MODE.md  COMPOSER_MASTER_PLAN.md  (+108 more)
.claude/: claude.md
.github/: LINTER_FALSE_POSITIVES.md  SECRETS_SETUP.md  actionlint.yml  dependabot.yml
agents/: __init__.py  aggressive_kelly.py  api_integrations.py  noaa_weather_agent.py  xai_grok_agent.py
app/: index.html  sw.js
audits/: code-duplication-detection.md  code-quality-metrics-standards.md  design-pattern-implementation.md  error-handling-resilience.md  security-review-pr3.md  solid-principles.md
backend/: __init__.py  main.py  (+1 more)
(+292 files in other folders)
