[project]
name = "nfl-picks"
version = "1.0.0"
description = "NFL betting intelligence - validated 65.6% accuracy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Private"}

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "nfl-data-py>=0.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "pyarrow>=14.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "hypothesis>=6.82",
    "pandera>=0.17",
]

[project.scripts]
picks = "nfl_picks.cli:main"
picks-serve = "nfl_picks.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nfl_picks"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["nfl_picks"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/nfl_picks --cov-report=term-missing"

[tool.coverage.run]
source = ["src/nfl_picks"]
branch = true
